# ryca-django-grpc

./: .gitignore  README.md  README.rst  generics.py  permissions.py  proto_serializers.py  requirements.txt  services.py  settings.py  setup.cfg  setup.py
management/commands/: generateproto.py  grpcrunserver.py
ryca_django_grpc/: apps.py  generics.py  permissions.py  proto_serializers.py  services.py  signals.py  test.py
ryca_django_grpc/management/commands/: generateproto.py
